fixed misses not showing up in the timeline

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,4 +55,5 @@ body {
     display: block;
     overflow: hidden;
     box-shadow: 0px 3px 4px #ccc;
+    background-color: #f8f8f8;
 }
